--- a/index.html
+++ b/index.html
@@ -63,58 +63,89 @@
           </div>
         </div>
       </section>
+
+      <!-- Advantages -->
       <section class="section advantages" id="benefits">
-        <div class="container">
-          <h2 class="heading-title" data-aos="fade-right">Advantages</h2>
-          <p class="heading-subtitle">Our Benefits</p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit quis vitae nullam aliquet
-            dignissim quis. Vel, faucibus ac justo aliquam donec enim, commodo fermum vitae. Et
-            velit sceleris, commodo fermentum vitae. Et velit sceleris
-          </p>
-          <button class="button" type="button">Get started</button>
-          <ul>
-            <li>
-              <div class="advantage-card">
-                <svg class="advantage-card-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-smart-car"></use>
-                </svg>
-                <h3 class="advantage-card-title">Car Rental</h3>
-                <p class="advantage-card-text">
-                  Lorem ipsum dolor sit ame, consectetur adipiscing elit. Sit quis vitae
-                </p>
-              </div>
-            </li>
-            <li>
-              <div class="advantage-card">
-                <svg class="advantage-card-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-ship"></use>
-                </svg>
-                <h3>Car Rental</h3>
-                <p>Lorem ipsum dolor sit ame, consectetur adipiscing elit. Sit quis vitae</p>
-              </div>
-            </li>
-            <li>
-              <div class="advantage-card">
-                <svg class="advantage-card-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-bus"></use>
-                </svg>
-                <h3>Car Rental</h3>
-                <p>Lorem ipsum dolor sit ame, consectetur adipiscing elit. Sit quis vitae</p>
-              </div>
-            </li>
-            <li>
-              <div class="advantage-card">
-                <svg class="advantage-card-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-driving"></use>
-                </svg>
-                <h3>Car Rental</h3>
-                <p>Lorem ipsum dolor sit ame, consectetur adipiscing elit. Sit quis vitae</p>
-              </div>
-            </li>
-          </ul>
+        <div class="common container">
+          <div class="advantages-container">
+            <h2 class="heading-title" data-aos="fade-right">Advantages</h2>
+            <p class="heading-subtitle">Our Benefits</p>
+            <p class="heading-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit quis vitae nullam aliquet
+              dignissim quis. Vel, faucibus ac justo aliquam donec enim, commodo fermum vitae. Et
+              velit sceleris, commodo fermentum vitae. Et velit sceleris
+            </p>
+            <button class="button" type="button">
+              Get started
+              <svg width="24" height="16">
+                <use href="./images/icons.svg#icon-arrow"></use>
+              </svg>
+            </button>
+          </div>
+
+          <div class="card-thumb">
+            <ul class="card-container">
+              <li class="flex-element">
+                <div class="advantage-card">
+                  <div class="thumb">
+                    <svg class="advantage-card-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-smart-car"></use>
+                    </svg>
+                  </div>
+
+                  <h3 class="advantage-card-title">Car Rental</h3>
+                  <p class="advantage-card-text">
+                    Lorem ipsum dolor sit ame, consectetur adipiscing elit. Sit quis vitae
+                  </p>
+                </div>
+              </li>
+
+              <li class="flex-element">
+                <div class="advantage-card">
+                  <div class="thumb">
+                    <svg class="advantage-card-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-ship"></use>
+                    </svg>
+                  </div>
+                  <h3 class="advantage-card-title">Car Rental</h3>
+                  <p class="advantage-card-text">
+                    Lorem ipsum dolor sit ame, consectetur adipiscing elit. Sit quis vitae
+                  </p>
+                </div>
+              </li>
+
+              <li class="flex-element">
+                <div class="advantage-card">
+                  <div class="thumb">
+                    <svg class="advantage-card-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-bus"></use>
+                    </svg>
+                  </div>
+                  <h3 class="advantage-card-title">Car Rental</h3>
+                  <p class="advantage-card-text">
+                    Lorem ipsum dolor sit ame, consectetur adipiscing elit. Sit quis vitae
+                  </p>
+                </div>
+              </li>
+
+              <li class="flex-element">
+                <div class="advantage-card">
+                  <div class="thumb">
+                    <svg class="advantage-card-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-driving"></use>
+                    </svg>
+                  </div>
+                  <h3 class="advantage-card-title">Car Rental</h3>
+                  <p class="advantage-card-text">
+                    Lorem ipsum dolor sit ame, consectetur adipiscing elit. Sit quis vitae
+                  </p>
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
+
       <section class="section features" id="features">
         <div class="container">
           <h2 class="heading-title" data-aos="fade-right">Features</h2>
@@ -150,21 +181,38 @@
           </ul>
         </div>
       </section>
+
       <section class="section" id="about">
-        <div class="container">
-          <img src="./images/about-us-image.jpg" alt="Team members are discussing project" />
-          <h2 class="heading-title">About us</h2>
-          <p class="heading-subtitle">Who we are</p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit quis vitae nullam aliquet
-            dignissim quis. Vel, faucibus ac justo aliquam donec enim, commodo fermentum vitae. Et
-            velit sceleris, commodo entum vitaefermentum vitae. Et velit sceleris nullam aliquet
-            dignissim
-          </p>
-          <button class="button" type="button">Get started</button>
+        <div class="about-us container">
+          <div class="about-thumb">
+            <img
+              src="./images/people.png"
+              alt="Team members are discussing project"
+              width="610"
+              height="570"
+            />
+          </div>
+
+          <div class="heading-thumb">
+            <h2 class="heading-title">About us</h2>
+            <p class="heading-subtitle">Who we are</p>
+            <p class="heading-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit quis vitae nullam aliquet
+              dignissim quis. Vel, faucibus ac justo aliquam donec enim, commodo fermentum vitae. Et
+              velit sceleris, commodo entum vitaefermentum vitae. Et velit sceleris nullam aliquet
+              dignissim
+            </p>
+            <button class="button" type="button">
+              Get started
+              <svg width="24" height="16">
+                <use href="./images/icons.svg#icon-arrow"></use>
+              </svg>
+            </button>
+          </div>
         </div>
       </section>
-      <section class="section" id="team">
+
+      <section class="team section" id="team">
         <div class="container">
           <h2 class="heading-title" data-aos="fade-right">Our Team</h2>
           <p class="heading-subtitle">How we look like</p>
@@ -197,46 +245,93 @@
         </div>
       </section>
     </main>
-    <footer>
+
+    <footer class="footer">
       <div class="container">
-        <a href="/">
-          <img src="./images/logo.svg" alt="Awesome UI logo" />
-        </a>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-        <p>Copyright &copy; 2022 AWESOME</p>
-        <p>All rights reserved</p>
-        <address>
-          <ul class="socials-list">
-            <li class="socials-item">
-              <a class="socials-link" href="#">
-                <svg width="16" height="16">
-                  <use href="./images/icons.svg#icon-instagram"></use>
+        <div class="footer-container">
+          <div class="logo-container">
+            <a href="/">
+              <img src="./images/logo.svg" alt="Awesome UI logo" />
+            </a>
+            <p class="footer-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            <p>Copyright &copy; 2022 AWESOME</p>
+            <p>All rights reserved</p>
+            <address>
+              <ul class="socials-list">
+                <li class="socials-item">
+                  <a class="socials-link" href="#">
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="socials-item">
+                  <a class="socials-link" href="#">
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#icon-dribble"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="socials-item">
+                  <a class="socials-link" href="#">
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="socials-item">
+                  <a class="socials-link" href="#">
+                    <svg width="16" height="16">
+                      <use href="./images/icons.svg#icon-youtube"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </address>
+          </div>
+
+          <div class="footer-list">
+            <p class="footer-title">Company</p>
+            <ul>
+              <li class="footer-item"><a class="footer-link" href="#">Lorem Ipsum 1</a></li>
+              <li class="footer-item"><a class="footer-link" href="#">Lorem 2</a></li>
+              <li class="footer-item"><a class="footer-link" href="#">Lorem 3</a></li>
+              <li class="footer-item"><a class="footer-link" href="#">Lorem 4</a></li>
+              <li class="footer-item"><a class="footer-link" href="#">Lorem 5</a></li>
+            </ul>
+          </div>
+
+          <div class="footer-list">
+            <p class="footer-title">Support</p>
+            <ul>
+              <li class="footer-item"><a class="footer-link" href="#">Lorem Ipsum 6</a></li>
+              <li class="footer-item"><a class="footer-link" href="#">Lorem 7</a></li>
+              <li class="footer-item"><a class="footer-link" href="#">Lorem 8</a></li>
+              <li class="footer-item"><a class="footer-link" href="#">Lorem 9</a></li>
+              <li class="footer-item"><a class="footer-link" href="#">Lorem 10</a></li>
+            </ul>
+          </div>
+
+          <div class="footer-form">
+            <p class="footer-form-title">Send message</p>
+            <form name="footer-form">
+               <form class="footer-form" autocomplete="on">
+            <label class="footer-label" for="mail"></label>
+            <textarea
+              class="footer-form-textarea"
+              name="mail"
+              id="mail"
+              placeholder="Your email address"
+            ></textarea>
+
+            <button class="button" type="submit">Send message
+              <svg width="24" height="16">
+                  <use href="./images/icons.svg#icon-arrow"></use>
                 </svg>
-              </a>
-            </li>
-            <li class="socials-item">
-              <a class="socials-link" href="#">
-                <svg width="16" height="16">
-                  <use href="./images/icons.svg#icon-dribble"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials-item">
-              <a class="socials-link" href="#">
-                <svg width="16" height="16">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials-item">
-              <a class="socials-link" href="#">
-                <svg width="16" height="16">
-                  <use href="./images/icons.svg#icon-youtube"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </address>
+            </button>
+            </form>
+          </div>
+        </div>
       </div>
     </footer>
 
