переверстала по БЕМ

--- a/index.html
+++ b/index.html
@@ -38,17 +38,19 @@
               <li><a class="header__link" href="#team">Team</a></li>
             </ul>
           </nav>
-          <button class="header__button button button-small" type="button">Register</button>
+          <button class="header__button button" type="button">Register</button>
         </div>
       </div>
     </header>
+
     <main>
+      <!-- Hero -->
       <section class="hero-section">
         <div class="container">
-          <div class="hero-container">
-            <div class="hero-content">
-              <h1 class="hero-title">Awesome User Interface is what we can apply</h1>
-              <p class="hero-text">
+          <div class="hero-section__container">
+            <div class="hero-section__content">
+              <h1 class="hero-section__title">Awesome User Interface is what we can apply</h1>
+              <p class="hero-section__text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Augue et eros, pellentesque
                 et. Tristique ullamcorper ac pharetra in nisi sit vivamus lorem.
               </p>
@@ -65,9 +67,9 @@
       </section>
 
       <!-- Advantages -->
-      <section class="section advantages" id="benefits">
-        <div class="common container">
-          <div class="advantages-container">
+      <section class="advantages section" id="benefits">
+        <div class="section__container container">
+          <div class="advantages__container">
             <h2 class="heading-title" data-aos="fade-right">Advantages</h2>
             <p class="heading-subtitle">Our Benefits</p>
             <p class="heading-text">
@@ -83,60 +85,60 @@
             </button>
           </div>
 
-          <div class="card-thumb">
-            <ul class="card-container">
-              <li class="flex-element">
-                <div class="advantage-card">
-                  <div class="thumb">
-                    <svg class="advantage-card-icon" width="24" height="24">
+          <div class="card-section">
+            <ul class="card-section__container">
+              <li class="card-section__element">
+                <div class="card-section__card">
+                  <div class="card-section__thumb">
+                    <svg class="card-section__icon" width="24" height="24">
                       <use href="./images/icons.svg#icon-smart-car"></use>
                     </svg>
                   </div>
 
-                  <h3 class="advantage-card-title">Car Rental</h3>
-                  <p class="advantage-card-text">
+                  <h3 class="card-section__title">Car Rental</h3>
+                  <p class="card-section__text">
                     Lorem ipsum dolor sit ame, consectetur adipiscing elit. Sit quis vitae
                   </p>
                 </div>
               </li>
 
-              <li class="flex-element">
-                <div class="advantage-card">
-                  <div class="thumb">
-                    <svg class="advantage-card-icon" width="24" height="24">
+              <li class="card-section__element">
+                <div class="card-section__card">
+                  <div class="card-section__thumb">
+                    <svg class="card-section__icon" width="24" height="24">
                       <use href="./images/icons.svg#icon-ship"></use>
                     </svg>
                   </div>
-                  <h3 class="advantage-card-title">Car Rental</h3>
-                  <p class="advantage-card-text">
+                  <h3 class="card-section__title">Boat Cruise</h3>
+                  <p class="card-section__text">
                     Lorem ipsum dolor sit ame, consectetur adipiscing elit. Sit quis vitae
                   </p>
                 </div>
               </li>
 
-              <li class="flex-element">
-                <div class="advantage-card">
-                  <div class="thumb">
-                    <svg class="advantage-card-icon" width="24" height="24">
+              <li class="card-section__element">
+                <div class="card-section__card">
+                  <div class="card-section__thumb">
+                    <svg class="card-section__icon" width="24" height="24">
                       <use href="./images/icons.svg#icon-bus"></use>
                     </svg>
                   </div>
-                  <h3 class="advantage-card-title">Car Rental</h3>
-                  <p class="advantage-card-text">
+                  <h3 class="card-section__title">Bus Trip</h3>
+                  <p class="card-section__text">
                     Lorem ipsum dolor sit ame, consectetur adipiscing elit. Sit quis vitae
                   </p>
                 </div>
               </li>
 
-              <li class="flex-element">
-                <div class="advantage-card">
-                  <div class="thumb">
-                    <svg class="advantage-card-icon" width="24" height="24">
+              <li class="card-section__element">
+                <div class="card-section__card">
+                  <div class="card-section__thumb">
+                    <svg class="card-section__icon" width="24" height="24">
                       <use href="./images/icons.svg#icon-driving"></use>
                     </svg>
                   </div>
-                  <h3 class="advantage-card-title">Car Rental</h3>
-                  <p class="advantage-card-text">
+                  <h3 class="card-section__title">Road Trip</h3>
+                  <p class="card-section__text">
                     Lorem ipsum dolor sit ame, consectetur adipiscing elit. Sit quis vitae
                   </p>
                 </div>
@@ -146,35 +148,35 @@
         </div>
       </section>
 
-      <section class="section features" id="features">
+      <section class="features section" id="features">
         <div class="container">
           <h2 class="heading-title" data-aos="fade-right">Features</h2>
           <p class="heading-subtitle">What we can apply</p>
-          <ul class="features-list">
-            <li class="features-item">
-              <div class="feature-card">
-                <svg class="feature-card-icon" width="64" height="64">
+          <ul class="features__list">
+            <li class="features__item">
+              <div class="features__card">
+                <svg class="features__icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-python"></use>
                 </svg>
-                <h3>MOT consectet</h3>
+                <h3 class="features__title">MOT consectet</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit quis vitae</p>
               </div>
             </li>
-            <li class="features-item">
-              <div class="feature-card">
-                <svg class="feature-card-icon" width="64" height="64">
+            <li class="features__item">
+              <div class="features__card">
+                <svg class="features__icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-iost"></use>
                 </svg>
-                <h3>MOT consectet</h3>
+                <h3 class="features__title">MOT consectet</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit quis vitae</p>
               </div>
             </li>
-            <li class="features-item">
-              <div class="feature-card">
-                <svg class="feature-card-icon" width="64" height="64">
+            <li class="features__item">
+              <div class="features__card">
+                <svg class="features__icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-stacks"></use>
                 </svg>
-                <h3>MOT consectet</h3>
+                <h3 class="features__title features__title--uppercase">MOT consectet</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit quis vitae</p>
               </div>
             </li>
@@ -182,9 +184,10 @@
         </div>
       </section>
 
+      <!-- About Us -->
       <section class="section" id="about">
         <div class="about-us container">
-          <div class="about-thumb">
+          <div class="about-us__thumb">
             <img
               src="./images/people.png"
               alt="Team members are discussing project"
@@ -217,36 +220,36 @@
           <h2 class="heading-title" data-aos="fade-right">Our Team</h2>
           <p class="heading-subtitle">How we look like</p>
 
-          <ul class="team-list">
-            <li class="team-item">
+          <ul class="team__list">
+            <li class="team__item">
               <img src="./images/one.jpg" alt="man in the suit" width="180" height="264" />
-             <div class="team-card-title">
-              <p class="team-text">CTO May & Baker</p>
-              <h3 class="team-title">Tayo Oshinuwa</h3>
-            </div> 
-              <blockquote class="blockquote">
+              <div class="team__content">
+                <p class="team__text">CTO May & Baker</p>
+                <h3 class="team__title">Tayo Oshinuwa</h3>
+              </div>
+              <blockquote class="team__blockquote">
                 “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit quis vitae“
               </blockquote>
             </li>
 
-            <li class="team-item">
+            <li class="team__item">
               <img src="./images/two.jpg" alt="woman with ponytail" width="170" height="264" />
-              <div class="team-card-title">
-              <p class="team-text">CTO May & Baker</p>
-              <h3 class="team-title">Tayo Oshinuwa</h3>
-            </div> 
-              <blockquote class="blockquote">
+              <div class="team__content">
+                <p class="team__text">CTO May & Baker</p>
+                <h3 class="team__title">Tayo Oshinuwa</h3>
+              </div>
+              <blockquote class="team__blockquote">
                 “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit quis vitae“
               </blockquote>
             </li>
 
-            <li class="team-item">
+            <li class="team__item">
               <img src="./images/three.jpg" alt="man in the cap" width="180" height="264" />
-             <div class="team-card-title">
-              <p class="team-text">CTO May & Baker</p>
-              <h3 class="team-title">Tayo Oshinuwa</h3>
-            </div> 
-              <blockquote class="blockquote">
+              <div class="team__content">
+                <p class="team__text">CTO May & Baker</p>
+                <h3 class="team__title">Tayo Oshinuwa</h3>
+              </div>
+              <blockquote class="team__blockquote">
                 “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit quis vitae“
               </blockquote>
             </li>
@@ -257,39 +260,39 @@
 
     <footer class="footer">
       <div class="container">
-        <div class="footer-container">
-          <div class="logo-container">
+        <div class="footer__container">
+          <div class="footer__logo">
             <a href="/">
               <img src="./images/logo.svg" alt="Awesome UI logo" />
             </a>
-            <p class="footer-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            <p class="footer__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
             <p>Copyright &copy; 2022 AWESOME</p>
             <p>All rights reserved</p>
             <address>
-              <ul class="socials-list">
-                <li class="socials-item">
-                  <a class="socials-link" href="#">
+              <ul class="socials">
+                <li class="socials__item">
+                  <a class="socials__link" href="#">
                     <svg width="16" height="16">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="socials-item">
-                  <a class="socials-link" href="#">
+                <li class="socials__item">
+                  <a class="socials__link" href="#">
                     <svg width="16" height="16">
                       <use href="./images/icons.svg#icon-dribble"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="socials-item">
-                  <a class="socials-link" href="#">
+                <li class="socials__item">
+                  <a class="socials__link" href="#">
                     <svg width="16" height="16">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="socials-item">
-                  <a class="socials-link" href="#">
+                <li class="socials__item">
+                  <a class="socials__link" href="#">
                     <svg width="16" height="16">
                       <use href="./images/icons.svg#icon-youtube"></use>
                     </svg>
@@ -300,45 +303,50 @@
           </div>
 
           <div class="footer-list">
-            <p class="footer-title">Company</p>
+            <p class="footer-list__title">Company</p>
             <ul>
-              <li class="footer-item"><a class="footer-link" href="#">Lorem Ipsum 1</a></li>
-              <li class="footer-item"><a class="footer-link" href="#">Lorem 2</a></li>
-              <li class="footer-item"><a class="footer-link" href="#">Lorem 3</a></li>
-              <li class="footer-item"><a class="footer-link" href="#">Lorem 4</a></li>
-              <li class="footer-item"><a class="footer-link" href="#">Lorem 5</a></li>
+              <li class="footer-list__item">
+                <a class="footer-list__link" href="#">Lorem Ipsum 1</a>
+              </li>
+              <li class="footer-list__item"><a class="footer-list__link" href="#">Lorem 2</a></li>
+              <li class="footer-list__item"><a class="footer-list__link" href="#">Lorem 3</a></li>
+              <li class="footer-list__item"><a class="footer-list__link" href="#">Lorem 4</a></li>
+              <li class="footer-list__item"><a class="footer-list__link" href="#">Lorem 5</a></li>
             </ul>
           </div>
 
           <div class="footer-list">
-            <p class="footer-title">Support</p>
+            <p class="footer-list__title">Support</p>
             <ul>
-              <li class="footer-item"><a class="footer-link" href="#">Lorem Ipsum 6</a></li>
-              <li class="footer-item"><a class="footer-link" href="#">Lorem 7</a></li>
-              <li class="footer-item"><a class="footer-link" href="#">Lorem 8</a></li>
-              <li class="footer-item"><a class="footer-link" href="#">Lorem 9</a></li>
-              <li class="footer-item"><a class="footer-link" href="#">Lorem 10</a></li>
+              <li class="footer-list__item">
+                <a class="footer-list__link" href="#">Lorem Ipsum 6</a>
+              </li>
+              <li class="footer-list__item"><a class="footer-list__link" href="#">Lorem 7</a></li>
+              <li class="footer-list__item"><a class="footer-list__link" href="#">Lorem 8</a></li>
+              <li class="footer-list__item"><a class="footer-list__link" href="#">Lorem 9</a></li>
+              <li class="footer-list__item"><a class="footer-list__link" href="#">Lorem 10</a></li>
             </ul>
           </div>
 
-          <div class="footer-form">
-            <p class="footer-form-title">Send message</p>
-            <form name="footer-form">
-               <form class="footer-form" autocomplete="on">
-            <label class="footer-label" for="mail"></label>
-            <textarea
-              class="footer-form-textarea"
-              name="mail"
-              id="mail"
-              placeholder="Your email address"
-              required
-            ></textarea>
+          <div class="form-container">
+            <p class="form-container__title">Send message</p>
+            <!-- <form name="footer-form"> -->
+            <form class="footer-form" autocomplete="on">
+              <label class="footer-form__label" for="mail"></label>
+              <textarea
+                class="footer-form__textarea"
+                name="mail"
+                id="mail"
+                placeholder="Your email address"
+                required
+              ></textarea>
 
-            <button class="button" type="submit">Send message
-              <svg width="24" height="16">
+              <button class="button" type="submit">
+                Send message
+                <svg width="24" height="16">
                   <use href="./images/icons.svg#icon-arrow"></use>
                 </svg>
-            </button>
+              </button>
             </form>
           </div>
         </div>
@@ -402,7 +410,6 @@
                   type="email"
                   name="user-email"
                   placeholder=" "
-                  
                 />
                 <svg class="form-field__icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-email"></use>
@@ -410,21 +417,21 @@
               </div>
             </div>
 
-            <label class="form-field-label" for="user-comment">Коментар</label>
+            <label class="form-field__label" for="user-comment">Коментар</label>
             <textarea
-              class="form-field-textarea"
+              class="form-field__textarea"
               name="user-comment"
               id="user-comment"
               placeholder="Введіть коментар..."
             ></textarea>
 
-            <div class="form-field-checkbox">
-              <label class="checkbox-label"
-                ><input class="checkbox-input" type="checkbox" name="terms-checkbox" /><span
-                  class="checkbox-icon"
+            <div class="checkbox">
+              <label class="checkbox__label"
+                ><input class="checkbox__input" type="checkbox" name="terms-checkbox" /><span
+                  class="checkbox__icon"
                 ></span
                 >Погоджуюся з розсилкою та приймаю
-                <a href="#" class="checkbox-link">Умови договору</a></label
+                <a href="#" class="checkbox__link">Умови договору</a></label
               >
             </div>
 
