змінила стилі на scss

--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Awesome UI</title>
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;1,400&display=swap"
       rel="stylesheet"
     />
-    <!-- Styles -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
@@ -20,7 +16,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
+    <link rel="stylesheet" href="./css/main.min.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
@@ -38,7 +35,7 @@
               <li><a class="header__link" href="#team">Team</a></li>
             </ul>
           </nav>
-          <button class="header__button button" type="button">Register</button>
+          <button class="header__button" type="button">Register</button>
         </div>
       </div>
     </header>
@@ -215,6 +212,7 @@
         </div>
       </section>
 
+      <!-- Team -->
       <section class="team section" id="team">
         <div class="container">
           <h2 class="heading-title" data-aos="fade-right">Our Team</h2>
@@ -258,6 +256,7 @@
       </section>
     </main>
 
+    <!-- Footer -->
     <footer class="footer">
       <div class="container">
         <div class="footer__container">
@@ -308,10 +307,18 @@
               <li class="footer-list__item">
                 <a class="footer-list__link" href="#">Lorem Ipsum 1</a>
               </li>
-              <li class="footer-list__item"><a class="footer-list__link" href="#">Lorem 2</a></li>
-              <li class="footer-list__item"><a class="footer-list__link" href="#">Lorem 3</a></li>
-              <li class="footer-list__item"><a class="footer-list__link" href="#">Lorem 4</a></li>
-              <li class="footer-list__item"><a class="footer-list__link" href="#">Lorem 5</a></li>
+              <li class="footer-list__item">
+                <a class="footer-list__link" href="#">Lorem 2</a>
+              </li>
+              <li class="footer-list__item">
+                <a class="footer-list__link" href="#">Lorem 3</a>
+              </li>
+              <li class="footer-list__item">
+                <a class="footer-list__link" href="#">Lorem 4</a>
+              </li>
+              <li class="footer-list__item">
+                <a class="footer-list__link" href="#">Lorem 5</a>
+              </li>
             </ul>
           </div>
 
@@ -321,10 +328,18 @@
               <li class="footer-list__item">
                 <a class="footer-list__link" href="#">Lorem Ipsum 6</a>
               </li>
-              <li class="footer-list__item"><a class="footer-list__link" href="#">Lorem 7</a></li>
-              <li class="footer-list__item"><a class="footer-list__link" href="#">Lorem 8</a></li>
-              <li class="footer-list__item"><a class="footer-list__link" href="#">Lorem 9</a></li>
-              <li class="footer-list__item"><a class="footer-list__link" href="#">Lorem 10</a></li>
+              <li class="footer-list__item">
+                <a class="footer-list__link" href="#">Lorem Ipsum 7</a>
+              </li>
+              <li class="footer-list__item">
+                <a class="footer-list__link" href="#">Lorem Ipsum 8</a>
+              </li>
+              <li class="footer-list__item">
+                <a class="footer-list__link" href="#">Lorem Ipsum 9</a>
+              </li>
+              <li class="footer-list__item">
+                <a class="footer-list__link" href="#">Lorem Ipsum 10</a>
+              </li>
             </ul>
           </div>
 
